--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 .App-container {
   height: 100vh;
 }
+main {
+  height: 100%;
+  padding: 24px;
+}
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, nav .brand-logo {
+  font-family: Cinzel;
+}
