--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 main {
   height: 100%;
-  padding: 24px;
+  padding: 34.5px;
   background-color: #f9f8f8;
 }
 a {
@@ -13,4 +13,8 @@ a {
 
 h1, h2, h3, h4, nav .brand-logo {
   font-family: Cinzel;
+}
+
+h2 {
+  padding: 0 1.5rem;
 }
