--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 .App-container {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 main {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
   padding: 34.5px;
   background-color: #f9f8f8;
 }
