--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -9,4 +9,15 @@
 .subheader {
   padding: 0 32px;
 }
+a.dropdown-trigger {
+  padding: 0 30px;
+  white-space: nowrap;
+}
+a.dropdown-trigger:focus {
+  outline: 0;
+}
+
+.dropdown-content {
+  white-space: nowrap;
+}
 
