--- a/src/components/CaseDetail/CaseDetail.css
+++ b/src/components/CaseDetail/CaseDetail.css
@@ -14,6 +14,14 @@
 i {
   margin-bottom: 13.224px;
 }
+h5 {
+  display: flex;
+  align-items: flex-end;
+}
+h5 i {
+  margin-bottom: 0;
+  padding-right: 8px;
+}
 a {
   color: #000;
   cursor: pointer;
@@ -30,4 +38,5 @@ a.btn {
 }
 #favorite-icon {
   color: red;
+  cursor: pointer;
 }
