--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,56 @@
+html, body {
+  height: 100vh;
+}
+#root {
+  height: 100%;
+}
 .App-container {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  margin: 0 auto;
+}
+#header-row {
+  margin: 0;
+}
+#content-row {
+  margin: 0;
+  display: flex;
+  height: 100%;
+}
+#sideNav-col {
+  padding: 0;
+  max-width: 300px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 64px;
+  z-index: 999;
+}
+#desktop {
+  width: 100%;
+  height: 100%;
+}
+#main-col {
+  padding: 0;
+  height: auto;
+  border-left: 1px solid #E0E0E0;
+  flex-grow: 1;
+  overflow: scroll;
+  background: #f9f8f8;
 }
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-grow: 1;
-  padding: 34.5px;
-  background-color: #f9f8f8;
-  height: auto;
+  padding: 20px 60px 20px 60px;
+  
 }
 a {
   color: #fff;
   text-decoration: none;
 }
 
-h1, h2, h3, nav .brand-logo {
+h1, h2, nav .brand-logo {
   font-family: Cinzel;
 }
 
