--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ html, body {
 #main-col {
   padding: 0;
   height: auto;
-  border-left: 1px solid #E0E0E0;
+  border-left: 1px solid #e8e8e8;
   flex-grow: 1;
   overflow: scroll;
   background: #f9f8f8;
@@ -42,7 +42,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 60px 20px 60px;
+  margin: 20px;
   
 }
 a {
