--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html, body {
   height: 100vh;
+  outline: 1px dashed fuchsia;
 }
 #root {
   height: 100%;
@@ -39,10 +40,8 @@ html, body {
   background: #f9f8f8;
 }
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 20px;
+  height: 100%;
+  /* outline: 1px dashed fuchsia; */
   
 }
 a {
