--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -1,17 +1,7 @@
-#note-form {
-  padding: 16px;
-}
-
 #title {
   font-weight: 700;
+  
 }
-
-#body {
-  height: auto;
-}
-#title, #body {
-  padding: 16.5px;
-}
-#body:focus, #title:focus {
-  border: 3px solid #000;
+.body {
+  min-height: 60vh;
 }
