--- a/src/components/EsCaseList/EsCaseList.css
+++ b/src/components/EsCaseList/EsCaseList.css
@@ -1,6 +1,5 @@
 .caselist-wrapper {
   width: 100%;
-  min-width: 400px;
 }
 .card-wrapper {
   padding: 0;
@@ -13,11 +12,9 @@
 .card-content:nth-child(1) {
   text-align: left;
 }
-.result-header {
-  text-align: left;
-}
+
 h6.header {
-  margin: 0 0 6.67px;
+  padding: 0 10.875px;
 }
 .list-utils {
   display: flex;
