add event handlers on radio options

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,6 +24,8 @@ a.dropdown-trigger:focus {
   white-space: nowrap;
 }
 #brand-logo {
-  font-size: 19px;
+  text-align: center;
+  width: 100%;
+  font-size: 15px;
   padding: 0 15px;
 }
