--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,30 @@
 html, body {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   outline: 1px dashed fuchsia;
 }
 #root {
   height: 100%;
 }
 .App-container {
-  display: flex;
-  flex-direction: column;
   height: 100%;
-  margin: 0 auto;
 }
 #header-row {
   margin: 0;
-  height: 70px;
+  height: 64px;
+  z-index: 100;
 }
 #content-row {
   margin: 0;
-  display: flex;
-  height: 100%;
+  height: calc(100% - 64px);
 }
 #sideNav-col {
   padding: 0;
   max-width: 300px;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 64px;
+  height: 100%;
+  /* position: -webkit-sticky;
+  position: sticky; */
+  /* top: 64px; */
   z-index: 999;
 }
 #desktop {
@@ -34,26 +33,28 @@ html, body {
 }
 #main-col {
   padding: 0;
-  height: auto;
+  height: 100%;
   border-left: 1px solid #e8e8e8;
-  flex-grow: 1;
-  overflow: scroll;
+  overflow: auto;
+  /* flex-grow: 1; */
   background: #f9f8f8;
 }
 main {
+  width: 100%;
   height: 100%;
-  /* outline: 1px dashed fuchsia; */
-  
 }
 a {
   color: #fff;
   text-decoration: none;
 }
 
-h1, h2, nav .brand-logo {
+h1, h2, .brand-logo {
   font-family: Cinzel;
 }
-
+h1 {
+  font-weight: 500;
+  text-transform: uppercase;
+}
 h2 {
   padding: 0 1.5rem;
 }
