--- a/src/components/CaseDetail/CaseDetail.css
+++ b/src/components/CaseDetail/CaseDetail.css
@@ -14,10 +14,10 @@
 i {
   margin-bottom: 13.224px;
 }
-h5 {
+/* h5 {
   display: flex;
   align-items: flex-end;
-}
+} */
 h5 i {
   margin-bottom: 0;
   padding-right: 8px;
