--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -5,3 +5,44 @@
 .inputs {
   background: white;
 }
+
+.row .col.s3 {
+  width: auto;
+}
+
+.width-full {
+  width: 100%;
+}
+
+.table-padding {
+  padding: 0 calc(.75rem * 2);
+}
+.padding-right-0 {
+  padding-right: 0;
+}
+.query-form {
+  margin: 16px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.button-50 {
+  width: 50%;
+}
+.select-input {
+  display: flex;
+}
+.input-field #rowInput {
+  text-align: center;
+}
+.select-wrapper {
+  width: 324px;
+}
+.query-action-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.query-action-wrapper .btn {
+  margin: 8px;
+  width: 100px;
+}
