--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,10 +1,27 @@
 .position-btn {
-  position: absolute;
-  right: 0;
-  bottom: 0;
+  
+  
 }
 .card .card-image .card-title {
-  top: 0;
-  right: 0;
+
   background: rgba(0,0,0,.3);
+  top: 0;
+  height: 2.5em; 
+  line-height: 18px;
+
+}
+.card {
+  height: 22em;
+}
+
+.card-image {
+  width: 100%;
+  height: 100%;
+
+}
+
+.card-image > a {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
