--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,3 +1,40 @@
+.toggle-search-type{
+  /* max-width: 100px; */
+  align-self: flex-end;
+  margin-top: 16px;
+  padding: 0;
+  border: none;
+  text-decoration: underline;
+  background: transparent;
+  cursor: pointer;
+}
+.toggle-search-type:focus{
+  background: transparent;
+}
+.width-full {
+  width: 100%;
+}
+.max-width-600px{
+  max-width: 600px;
+}
+.padding-right-0 {
+  padding-right: 0;
+}
+.display-inline{
+  display: inline;
+}
+.display-flex{
+  display: flex;
+}
+.flex-column{
+  flex-direction: column;
+}
+.flex-justify-center{
+  justify-content: center;
+}
+.flex-align-center{
+  align-items: center;
+}
 #searchForm {
   padding: 30px;
   outline: 1px solid grey;
@@ -10,18 +47,18 @@
   width: auto;
 }
 
-.width-full {
-  width: 100%;
-}
-
 .table-padding {
   padding: 0 calc(.75rem * 2);
 }
-.padding-right-0 {
-  padding-right: 0;
+
+.basic-form{
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.query-form {
-  margin: 16px 0;
+.advanced-form{
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,17 +69,85 @@
 .select-input {
   display: flex;
 }
+.input-field {
+  margin: 0;
+}
+.field-select > select{
+  flex-grow: 1;
+  height: 100%;
+  border: 1px solid rgb(200, 200, 200);
+  border-radius: 3px 0 0 3px;
+}
 .input-field #rowInput {
   text-align: center;
 }
+.input-field input[type="search"]{
+  margin: 0;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+}
 .select-wrapper {
-  width: 324px;
+  width: 100%;
+  max-width: 600px;
+}
+.select-wrapper i{
+  color: #fff;
 }
 .query-action-wrapper {
+  /* display: none; */
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
 }
 .query-action-wrapper .btn {
   margin: 8px;
   width: 100px;
+}
+.search-box-wrapper{
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  /* margin-bottom: 16px; */
+}
+.search-box{
+  background: #fff;
+  margin: 0 3px;
+  height: auto;
+  flex-grow: 2;
+  /* padding-left: 8px; */
+  border: 1px solid rgb(200, 200, 200);
+  border-radius: 5px;
+  /* outline: none; */
+}
+
+.search-btn{
+  background: #212121;
+  padding: 0;
+  flex-grow: 1;
+  width: 10%;
+  min-width: 50px;
+  max-width: 100px;
+  height: auto;
+  border: 1px solid rgb(151, 151, 151);
+  border-left: none;
+  border-radius: 5px;
+}
+.search-btn:hover{
+  background: #4de100;
+}
+.search-btn:focus{
+  background: #757575;
+}
+.search-btn i{
+  color: #fff;
+  width: 100%;
+  height: 100%;
+}
+.h1-search{
+  font-size: calc(32px + (40 - 32) * ((100vw - 300px) / (1600 - 300)));
+  margin: 24px 0;
+}
+select{
+  border-radius: 0;
 }
