--- a/src/components/SideNav/SideNav.css
+++ b/src/components/SideNav/SideNav.css
@@ -6,14 +6,13 @@
   align-items: center;
   padding: 16px 16px 8px;
   width: 100%;
-  height: 100%;
+  height: 64px;
 }
 #desktop {
   -webkit-transform: translateX(0%);
   transform: translateX(0%);
   position: static;
   margin-right: 0;
-  min-height: 100vh;
   padding: 0;
   height: 100%;
 }
@@ -22,9 +21,6 @@
 }
 .background > img {
   width: 100%;
-}
-.selectedLink {
-  background: fuchsia;
 }
 .disabled-link{
   pointer-events: none;
