--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -1,9 +1,6 @@
-.form {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  padding-bottom: 30px;
+form button {
+  margin-top: 24px;
 }
-.signupBtn {
-  align-self: flex-end;
+form div.input-field {
+  padding: 16px;
 }
