--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -50,7 +50,7 @@ body, html {
   background-repeat: no-repeat;
   background-attachment: fixed;
   position: relative;
-  padding-top: 10%;
+  padding-top: 0;
   border: 1px solid black;
   display: flex;
   place-items: center center;
