--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -7,3 +7,22 @@
 .signupBtn {
   align-self: flex-end;
 }
+.sign-up {
+  padding: 4em !important;
+}
+.error {
+  color: red;
+}
+.select {
+  z-index: 999;
+}
+
+.submit {
+  z-index: 20;
+}
+
+.required::after {
+  content: '*';
+  position: absolute;
+  color: red;
+}
