--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   padding: 16px 16px 8px;
+  color: green;
 }
 a.brand-logo {
   height: 100%;
@@ -26,14 +27,22 @@ a.dropdown-trigger:focus {
 #brand-logo {
   text-align: center;
   font-size: 15px;
+  width: 7em;
+  height: 100%;
+  background: url('https://barnorlawengine.files.wordpress.com/2019/09/cropped-ble-logo-1.jpg') no-repeat center;
+  background-size: cover;
+  z-index: 999;
 }
 .nav-wrapper {
   padding-left: 15px;
   height: 100%;
   z-index: 100;
+  border-bottom: 2px solid green;
+  
 }
 nav {
   height: 100%;
+  color: green;
 }
 .display-flex {
   display: flex;
@@ -46,8 +55,12 @@ nav {
 }
 nav ul a.btn {
   margin: 0;
+  color: green;
 }
 
 ul > li.br {
   
+}
+.nav-list {
+  color: green;
 }
