--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -34,7 +34,7 @@
 }
 .buttons-flex {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 .margin-0 {
