--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-html, body {
+* {
   box-sizing: border-box;
+}
+html, body {
   line-height: 1.5;
   color: rgba(0,0,0,0.87);
   font-weight: normal;
@@ -11,50 +13,45 @@ body{
   margin: 0;
   background-color: #e8e8e8;
 }
+.header, .content, .footer {
+  padding-left: 300px;
+}
 #root {
   height: 100%;
 }
 .App-container {
   height: 100%;
 }
+
 #header-row {
   margin: 0;
-  position: fixed;
-  width: 100%;
-  height: 64px;
-  z-index: 100;
 }
-#content-row {
+/*#content-row {
   margin: 0;
   height: 100%;
-  padding-top: 64px;
-}
+  padding-top: 64px; 
+}*/
 #sideNav-col {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
   padding: 0;
   width: 300px;
   height: 100%;
-  z-index: 999;
-  border-right: 1px solid #e8e8e8;
 }
-#desktop {
-  width: 100%;
-  height: 100%;
+#mobile {
+  z-index: 333333333333333;
 }
-/* #main-col {
+#main-col {
   padding: 0;
   height: 100%;
   border-left: 1px solid #e8e8e8;
   overflow: auto;
-  /* flex-grow: 1; */
-  /* background: #f9f8f8; 
-  } 
-  */
+  flex-grow: 1;
+  background: #f9f8f8; 
+}
 
-main {
+/* main {
   height: 100%;
 }
 a {
@@ -68,13 +65,13 @@ h1, .brand-logo {
 h1 {
   font-weight: 500;
   text-transform: uppercase;
-}
+} */
 
-@media only screen and (min-width: 993px) {
-  .has-fixed-sidenav {
-    padding-left: 300px;
+@media only screen and (max-width : 992px) {
+  .header, .content, .footer {
+    padding-left: 0;
   }
-  #sideNav-col{
-    display: block;
+  #desktop {
+    display: none;
   }
 }
