--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,8 @@
+nav {
+  position: relative;
+}
 
-.sidenav .user-view {
+/* .sidenav .user-view {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,16 +26,17 @@ a.dropdown-trigger:focus {
 
 .dropdown-content li>span {
   white-space: nowrap;
-}
+}*/
 #brand-logo {
   text-align: center;
-  font-size: 15px;
+  /* padding: 16px; */
   width: 7em;
   height: 100%;
   background: url('https://barnorlawengine.files.wordpress.com/2019/09/cropped-ble-logo-1.jpg') no-repeat center;
   background-size: cover;
-  z-index: 999;
+  /* z-index: 999; */
 }
+/*
 .nav-wrapper {
   padding-left: 15px;
   height: 100%;
@@ -63,4 +67,4 @@ ul > li.br {
 }
 .nav-list {
   color: green;
-}
+} */
