--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -54,13 +54,31 @@ body, html {
   display: flex;
   place-items: center center;
   place-content: center center;
-
+  min-height: 100vh;
 }
 .overlay {
   position: absolute;
   left: 0;
   width: 100%;
   height: 100%;
+}
+.banner-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255,255,255,.7);
+}
+
+.landing--about-me {
+  padding-top: 50px;
+  background: #4de100;
+  height: 75vh;
+}
+.landing--about-me h3 {
+  font-family: Cinzel;
+  font-weight: 800;
 }
 
 .icon {
@@ -77,6 +95,9 @@ body, html {
   display: flex;
   justify-content: center;
 
+}
+.services {
+  padding: 50px 0;
 }
 
 section {
@@ -153,6 +174,8 @@ section > a {
   letter-spacing: 1px;
   line-height: 50px;
   text-align: left;
+  font-family: Cinzel;
+  text-transform: uppercase;
 }
 
 .main-title {
@@ -162,4 +185,27 @@ section > a {
 .main-buttons {
 
 
+}
+.about-text {
+  line-height: 2.8rem;
+}
+
+@media screen and (max-width: 767px) {
+ 
+}
+@media screen and (max-width: 670px){
+  .banner {
+    min-height: 500px;
+  }
+  .landing--about-me {
+    padding: 25px 0;
+  }
+  .about-text {
+    font-size: 12px;
+    line-height: 2rem;
+    font-weight: 500;
+  }
+  .landing--about-me h3 {
+    font-size: 28px;
+  }
 }
