--- a/src/components/SideNav/SideNav.css
+++ b/src/components/SideNav/SideNav.css
@@ -1,12 +1,12 @@
-
 .sidenav .user-view {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  padding: 16px 16px 8px;
+  align-items: flex-start;
+  padding: 16px 32px;
   width: 100%;
   height: 64px;
+  background: #555;
 }
 #desktop {
   -webkit-transform: translateX(0%);
@@ -14,7 +14,11 @@
   position: static;
   margin-right: 0;
   padding: 0;
+  width: 100%;
   height: 100%;
+}
+#mobile {
+  z-index: 9999999999999;
 }
 .subheader {
   padding: 0 32px;
@@ -24,4 +28,7 @@
 }
 .disabled-link{
   pointer-events: none;
+}
+.sidenav {
+  z-index: 9999;
 }
