--- a/src/components/FormGroup/FormGroup.css
+++ b/src/components/FormGroup/FormGroup.css
@@ -1,6 +1,6 @@
 .form-group {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 2fr));
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
     place-content: center center;
     place-items: center center;
     grid-gap: 1em;
