--- a/src/components/Subject/Subject.css
+++ b/src/components/Subject/Subject.css
@@ -1,12 +1,38 @@
 .pick-subjects {
-    height: 100vh;
-    width: 25vw;
+    width: 20vw;
 
-    border: 1px solid black;
+    /*height: 80em; */
     overflow-y: scroll; /* Add scrollbar fix for windows users */
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100%, 2fr));
-    grid-gap: 1em;
+    display: flex;
+    
+    flex-direction: column;
+    justify-content: space-between;
+
     align-self: top;
     justify-self: left;
+
+    background: white;
+    padding: 1em;
+}
+
+.topic-cell {
+    font-size: 18px;
+    width: 93%;
+    padding: .7em;
+    line-height: 28px;
+    flex: 1;
+    margin-bottom: 1em;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    position: relative;
+    transition: all 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.topic-cell:hover {
+    background: #4de100;
+}
+
+.subject-link {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
 }
