--- a/src/components/TopicInfo/TopicInfo.css
+++ b/src/components/TopicInfo/TopicInfo.css
@@ -1,4 +1,16 @@
 .topic-info {
-    diplay: flex;
-    
+    display: flex;
+
+    justify-content: space-between;
+
+}
+#main-col {
+    width: 95vw;
+}
+
+.markdown-text {
+    flex: 1;
+    padding: 6em;
+    margin: 3em !important;
+
 }
