--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -76,9 +76,9 @@ body, html {
   background: #4de100;
   height: auto;
   overflow-y: scroll;
+  text-align: center;
 }
 .landing--about-me h3 {
-  font-family: Cinzel;
   font-weight: 800;
 }
 
@@ -124,12 +124,12 @@ section {
 
 section.pup {
   background: black;
-  color: green;
+  color: #4de100;
 
 } 
 
 section.qualify {
-  background: green;
+  background: #4de100;
   color: black;
 }
 
@@ -176,7 +176,7 @@ section > a {
   letter-spacing: 1px;
   line-height: 50px;
   text-align: left;
-  font-family: Cinzel;
+
   text-transform: uppercase;
 }
 
