--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body{
 }
 
 .header, .content, .footer {
-  padding-left: 300px;
+  padding-left: 250px;
 }
 #root {
   height: 100%;
@@ -44,7 +44,7 @@ body{
   top: 0;
   left: 0;
   padding: 0;
-  width: 300px;
+  width: 250px;
   height: 100%;
 }
 #mobile {
@@ -61,6 +61,10 @@ body{
 
  main {
   min-height: 100vh;
+}
+h5 {
+  margin: 0;
+  padding: 0;
 }
 /*
 a {
