--- a/src/components/ListCard/ListCard.css
+++ b/src/components/ListCard/ListCard.css
@@ -4,15 +4,28 @@
   margin-bottom: 0;
 }
 #card-panel {
+  display: flex;
+  justify-content: space-between;
   height: 100%;
+  margin: 0 0 4px 0;
+  padding: 16px;
+  
+}
+#card-panel:hover, #card-panel:focus {
+  /* padding-left: 13px;
+  border-left: 3px solid #4de100; */
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2), inset 3px 0 #4de100;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2), inset 3px 0 #4de100;
+}
+#card-panel>h5 {
   margin: 0;
 }
 .list-card {
   height: 100%;
 }
 div.color-favorites {
-  background: #333;
+  background: #fff;
 }
 h5.color-favorites {
-  color: white;
+  color: #333;
 }
