--- a/src/components/Subject/Subject.css
+++ b/src/components/Subject/Subject.css
@@ -31,5 +31,12 @@
 }
 
 .subject-link {
-    
+    margin-bottom: .5em;
+
+}
+
+.subject-link:hover {
+    transition: all 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);
+    background: #4de100;
+    color: #f9f8f8;
 }
