--- a/src/components/SideNav/SideNav.css
+++ b/src/components/SideNav/SideNav.css
@@ -33,6 +33,12 @@
 .sidenav {
   z-index: 9999;
 }
+.sidenav .collapsible-header {
+  padding: 0 32px;
+}
+.sidenav .collapsible-body li a {
+  padding: 0 45px;
+}
 .selected {
   color: #4de100;
 }
