--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -98,12 +98,14 @@ body, html {
 
 }
 .services {
-  padding: 50px 0;
-  height: auto;
+  padding: 2em;
+  display: grid;
+  grid-gap: 1em;
+  grid-auto-rows: 25em;
+  grid-template-columns: repeat(auto-fill, minmax(25em, 1fr));
 }
 
 section {
-  width: 82vw;
   height: 20em;
 
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
