--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -102,7 +102,7 @@ body, html {
   display: grid;
   grid-gap: 1em;
   grid-auto-rows: 25em;
-  grid-template-columns: repeat(auto-fill, minmax(25em, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(40em, 1fr));
 }
 
 section {
@@ -115,7 +115,7 @@ section {
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
 
 
 }
@@ -202,6 +202,13 @@ section > a {
 .section-about {
   overflow-y: scroll;
 
+}
+
+.section-info {
+  text-align: center;
+  place-self: center center;
+  width: 85%;
+  transform: translateY(-3em)
 }
 
 @media screen and (max-width: 767px) {
