--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ body{
 }
 .App-container {
   height: 100%;
+  
 }
 
 #header-row {
@@ -106,4 +107,7 @@ h1 {
   z-index: 999;
   /*position: fixed !important;*/
   
+}
+i.material-icons {
+  display: inline !important;
 }
