--- a/src/components/ManageUser/ManageUser.css
+++ b/src/components/ManageUser/ManageUser.css
@@ -7,10 +7,14 @@
   margin-bottom: 15px;
   padding: 4px 12px;
   background-color: #ddffdd;
-  border-left: 6px solid #4CAF50;
+  border-left: 6px solid #4caf50;
 }
 .successAlert > button {
   border: none;
   cursor: pointer;
   background-color: transparent;
+}
+
+.container--link {
+  padding-top: 8px;
 }
