--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,4 +1,4 @@
-.toggle-search-type{
+.toggle-search-type {
   /* max-width: 100px; */
   margin-top: 16px;
   padding: 0;
@@ -7,31 +7,31 @@
   background: transparent;
   cursor: pointer;
 }
-.toggle-search-type:focus{
+.toggle-search-type:focus {
   background: transparent;
 }
 .width-full {
   width: 100%;
 }
-.max-width-600px{
+.max-width-600px {
   max-width: 600px;
 }
 .padding-right-0 {
   padding-right: 0;
 }
-.display-inline{
+.display-inline {
   display: inline;
 }
-.display-flex{
+.display-flex {
   display: flex;
 }
-.flex-column{
+.flex-column {
   flex-direction: column;
 }
-.flex-justify-center{
+.flex-justify-center {
   justify-content: center;
 }
-.flex-align-center{
+.flex-align-center {
   align-items: center;
 }
 #searchForm {
@@ -47,21 +47,22 @@
 }
 
 .table-padding {
-  padding: 0 calc(.75rem * 2);
+  padding: 0 calc(0.75rem * 2);
 }
 
-.basic-form{
+.advanced-form {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.basic-form {
   margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.advanced-form{
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+
 .button-50 {
   width: 50%;
 }
@@ -71,7 +72,7 @@
 .input-field {
   margin: 0;
 }
-.field-select > select{
+.field-select > select {
   flex-grow: 1;
   height: 100%;
   border: 1px solid rgb(200, 200, 200);
@@ -80,7 +81,7 @@
 .input-field #rowInput {
   text-align: center;
 }
-.input-field input[type="search"]{
+.input-field input[type="search"] {
   margin: 0;
   outline: none;
   border: none;
@@ -89,8 +90,9 @@
 .select-wrapper {
   width: 100%;
   max-width: 600px;
+  display: flex;
 }
-.select-wrapper i{
+.select-wrapper i {
   color: #fff;
 }
 .query-action-wrapper {
@@ -102,14 +104,14 @@
   margin: 8px;
   width: 100px;
 }
-.search-box-wrapper{
+.search-box-wrapper {
   width: 100%;
   max-width: 600px;
   display: flex;
   flex-direction: column;
   /* margin-bottom: 16px; */
 }
-.search-box{
+.search-box {
   background: #fff;
   margin: 0 3px;
   height: auto;
@@ -120,7 +122,7 @@
   /* outline: none; */
 }
 
-.search-btn{
+.search-btn {
   background: #212121;
   padding: 0;
   flex-grow: 1;
@@ -132,21 +134,21 @@
   border-left: none;
   border-radius: 5px;
 }
-.search-btn:hover{
+.search-btn:hover {
   background: #4de100;
 }
-.search-btn:focus{
+.search-btn:focus {
   background: #757575;
 }
-.search-btn i{
+.search-btn i {
   color: #fff;
   width: 100%;
   height: 100%;
 }
-.h1-search{
+.h1-search {
   font-size: calc(32px + (40 - 32) * ((100vw - 300px) / (1600 - 300)));
   margin: 24px 0;
 }
-select{
+select {
   border-radius: 0;
 }
