--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
 
 .content,
 .footer {
-  padding-left: 250px;
+  /* padding-left: 250px; */
 }
 
 #root {
@@ -44,7 +44,7 @@ body {
   top: 64px;
   left: 0;
   padding: 0;
-  width: 250px;
+  /* width: 250px; */
   height: 100%;
   z-index: 9999;
 }
