--- a/src/styles/layout/_side-nav.scss
+++ b/src/styles/layout/_side-nav.scss
@@ -25,20 +25,22 @@
 .background > img {
   width: 100%;
 }
-.disabled-link{
+.disabled-link {
   pointer-events: none;
 }
 .sidenav {
   z-index: 99;
 }
-.sidenav .collapsible-header:hover, .sidenav .collapsible-body li a:hover {
+.sidenav .collapsible-header:hover,
+.sidenav .collapsible-body li a:hover {
   background-color: #fff;
   width: 100%;
 }
 .sidenav .collapsible-header {
   padding: 0 32px;
 }
-.collapsible-header:hover, .collapsible-header:hover:focus {
+.collapsible-header:hover,
+.collapsible-header:hover:focus {
   background: white;
 }
 
