--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+@import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
@@ -6,9 +7,19 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg-video";
 @import "components/button";
+@import "components/card";
 @import "components/composition";
+@import "components/feature-box";
+@import "components/form";
+@import "components/popup";
+@import "components/story";
 
+@import "layout/footer";
 @import "layout/grid";
+@import "layout/header";
+@import "layout/navigation";
+@import "layout/side-nav.scss";
 
 @import "pages/landing";
